--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1597,7 +1597,7 @@ element.style {
 .add-container .add-photo .item-photo li .i-btn {
     position: absolute;
     top: 25px;
-    left: 27px;
+    left: 33px;
     padding: 4px 5px 5px;
     background: white;
     border: 1px solid #666666;
@@ -1744,7 +1744,7 @@ html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, address, em, img, sub, sup,
     padding: 0;
     border: 0;
     font: inherit;
-
+}
 
 body {
     line-height: 1.5em;
@@ -1754,6 +1754,7 @@ body {
     font-family: Spoqa Han Sans, '나눔고딕', 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
     -webkit-text-size-adjust: none;
 }
+
 #add_room {
     margin-top: 20px;
 }
@@ -1764,4 +1765,83 @@ body {
     width: 30px;
     margin-right: 5px;
 }
+#file { display:none; } 
 
+ /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 100%;
+      }
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      #description {
+        font-family: Roboto;
+        font-size: 15px;
+        font-weight: 300;
+      }
+
+      #infowindow-content .title {
+        font-weight: bold;
+      }
+
+      #infowindow-content {
+        display: none;
+      }
+
+      #map #infowindow-content {
+        display: inline;
+      }
+
+      .add-table .pac-card {
+        margin: 10px 10px 0 0;
+        border-radius: 2px 0 0 2px;
+        box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        outline: none;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+        background-color: #fff;
+        font-family: Roboto;
+      }
+
+      #pac-container {
+        padding-bottom: 12px;
+        margin-right: 12px;
+      }
+
+      .add-table .pac-controls {
+        display: inline-block;
+        padding: 5px 11px;
+      }
+
+      .add-table .pac-controls label {
+        font-family: Roboto;
+        font-size: 13px;
+        font-weight: 300;
+      }
+
+      #pac-input {
+        background-color: #fff;
+        font-family: Roboto;
+        font-size: 15px;
+        font-weight: 300;
+        margin-left: 12px;
+        padding: 0 11px 0 13px;
+        text-overflow: ellipsis;
+        width: 400px;
+      }
+
+      #pac-input:focus {
+        border-color: #4d90fe;
+      }
+
+      #title {
+        color: #fff;
+        background-color: #4d90fe;
+        font-size: 25px;
+        font-weight: 500;
+        padding: 6px 12px;
+      }
