--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -36,6 +36,13 @@ body {
     width: 500px;
 }
 
+.card-signin2 {
+  border: 0;
+  border-radius: 1rem;
+  box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+    width: 1000px;
+}
+
 .card-signin .card-title .card-addr{
   margin-bottom: 2rem;
   font-weight: 300;
